--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.5.2
 beautifulsoup4==4.11.1
 certifi==2022.9.14
+cffi==1.15.1
 charset-normalizer==2.1.1
 cloudinary==1.29.0
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==38.0.4
+Deprecated==1.2.13
 dj-database-url==1.0.0
 Django==4.1.1
 django-bootstrap-v5==1.0.11
@@ -12,20 +15,34 @@ django-cors-headers==3.13.0
 django-heroku==0.3.1
 djangorestframework==3.13.1
 drf-yasg==1.21.3
+gcloud==0.18.3
+googleapis-common-protos==1.57.0
 gunicorn==20.1.0
+httplib2==0.21.0
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+jwcrypto==1.4.2
 MarkupSafe==2.1.1
+oauth2client==4.1.3
 packaging==21.3
 Pillow==9.2.0
+protobuf==4.21.12
 psycopg2==2.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pycryptodome==3.16.0
 pyparsing==3.0.9
+Pyrebase4==4.6.0
 python-decouple==3.6
 python-http-client==3.3.7
+python-jwt==4.0.0
 pytz==2022.2.1
 requests==2.28.1
+requests-toolbelt==0.10.1
+rsa==4.9
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
 sendgrid==6.9.7
@@ -36,3 +53,4 @@ starkbank-ecdsa==2.0.3
 uritemplate==4.1.1
 urllib3==1.26.12
 whitenoise==6.2.0
+wrapt==1.14.1
