--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Django==4.1.1
 django-bootstrap-v5==1.0.11
 django-cors-headers==3.13.0
 django-heroku==0.3.1
+django-rest-knox==4.2.0
 djangorestframework==3.13.1
 drf-yasg==1.21.3
 gcloud==0.18.3
